disabled the horizontal scroll bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,7 @@
-
+html{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
 body{
     margin: 0px;
     
